Fixes account selector overflow in backend/journal_entries form

--- a/app/themes/tekyla/stylesheets/tables.scss
+++ b/app/themes/tekyla/stylesheets/tables.scss
@@ -196,6 +196,9 @@ table {
           border-right: none;
           line-height: $lh-normal;
           @include ellipsis;
+          &.with-selector {
+            overflow: visible;
+          }
           &.hidden {
             display: none;
           }
